# ChangeLog for x11-themes/gnome-themes
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-themes/ChangeLog,v 1.212 2009/07/06 22:06:18 eva Exp $

*gnome-themes-2.26.3.1 (07 Jul 2009)

  07 Jul 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -gnome-themes-2.26.1.ebuild, -gnome-themes-2.26.3.ebuild,
  +gnome-themes-2.26.3.1.ebuild:
  Version bump. Fix build issues with recent autotools and clean old
  revisions.

*gnome-themes-2.26.3 (06 Jul 2009)

  06 Jul 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +gnome-themes-2.26.3.ebuild:
  Version bump. Updated translations.

*gnome-themes-2.26.2 (18 May 2009)

  18 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +gnome-themes-2.26.2.ebuild:
  Bump to 2.26.2. Translation updates.

*gnome-themes-2.26.1 (03 May 2009)

  03 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -gnome-themes-2.20.1.ebuild, -gnome-themes-2.22.2.ebuild,
  +gnome-themes-2.26.1.ebuild:
  New version for GNOME 2.26. Clean up old revisions.

  28 Apr 2009; Raúl Porcel <armin76@gentoo.org> gnome-themes-2.24.3.ebuild:
  sh stable

  27 Apr 2009; Jeroen Roovers <jer@gentoo.org> gnome-themes-2.24.3:
  Stable for HPPA (bug #260063).

  27 Apr 2009; Raúl Porcel <armin76@gentoo.org> gnome-themes-2.24.3.ebuild:
  arm stable

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  gnome-themes-2.24.3.ebuild:
  Stable on sparc, bug #260063

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org> gnome-themes-2.24.3.ebuild:
  alpha/ia64 stable wrt #260063

  15 Mar 2009; Markus Meier <maekke@gentoo.org> gnome-themes-2.24.3.ebuild:
  x86 stable, bug #260063

  11 Mar 2009; Daniel Gryniewicz <dang@gentoo.org>
  gnome-themes-2.24.3.ebuild:
  Marked stable on amd64

  06 Mar 2009; Brent Baude <ranger@gentoo.org> gnome-themes-2.24.3.ebuild:
  Marking gnome-themes-2.24.3 ppc stable for bug 260063

  05 Mar 2009; Brent Baude <ranger@gentoo.org> gnome-themes-2.24.3.ebuild: