@@ -1,9 +1,7 @@
 AUX gnome-themes-2.24.3-bashism.patch 524 RMD160 bdbeb167d71dbaa242dd12a5bae979602d2dbe04 SHA1 cb26e34e085cb6b135a58cf9241308990c40aa4b SHA256 f94fbd406d38ad0878c01f8cbe75573ae21545e42b67b2c51f4248e2cf714b28
 DIST gnome-themes-2.24.3.tar.bz2 1505357 RMD160 26aac887bf42f938eba0fa3f8569dfd2af6d01eb SHA1 d6e53ccf9b767cf8352ff7876a98424a44a009a5 SHA256 8f13e281a2b4363a980de2edbf16cd1ce0c895f84496f00758c29e00c929bf97
-DIST gnome-themes-2.26.2.tar.bz2 1603539 RMD160 d259c7664bf6f4c55dd1abf1f9e76cd617fc2dab SHA1 4b548309069f9d3b62e8f63e590a40d77b285d02 SHA256 423dfc65ab4988f946077483359fdff05b481eca03c01fccdad7c21911ed93f4
 DIST gnome-themes-2.26.3.1.tar.bz2 1582870 RMD160 53176af0dfbf9534fa8337f1d4fe0f2b1ec31998 SHA1 3696948ee025479869a2dd570603a2adc235d8f9 SHA256 cdf1720bf8c9c9682ed65bfd61587065e11f63f69d5e827ff7a8c49bb40cf9b7
 EBUILD gnome-themes-2.24.3.ebuild 1015 RMD160 2d89772d5b0643b383b4a5a9a8712e774e5314c4 SHA1 935639d2f9aa6a5e75b34dc19f38b2e32dadc979 SHA256 9195585511a291ecdd1a3cb9cb774096312afb1369c215713ee39e9c34bed639
-EBUILD gnome-themes-2.26.2.ebuild 1072 RMD160 b3159d98822148dcedeebe1f2eada22896bd41dc SHA1 daefb51a631d62819fff5d4a01c6f4dcf53869d9 SHA256 96dff58257138462525082f4b59691acf5b6f025af5b973705eeb4491b8ce969
-EBUILD gnome-themes-2.26.3.1.ebuild 1074 RMD160 854a8d502378d56a6b4e681481bb41f97b486078 SHA1 1f20eb818652cb74aa7c2e3ff3f20f0277623988 SHA256 a6ec0e64870344ec924fb305ff5c8c59e4d13b2c5b8be34186df420d4acedb03
-MISC ChangeLog 26376 RMD160 2d6f2431bf65fea41e3345a8c7740a08a3c8a0a0 SHA1 4b3998291af7037352b971d8f819f12f85d10690 SHA256 bb0319438f74e1929f5ecad68c69bbaf57cd1ad47287e9b1eeeba67ff29f441f
+EBUILD gnome-themes-2.26.3.1.ebuild 1390 RMD160 14d6ae6e076d151c24f2fdbdee5688a298b53045 SHA1 f8f69fc1715e650924c56b6481aa14bd6013279a SHA256 e6015c8748b18692f42142703368da1c4a9692e20c59c74071fc68aa19e1f05c
+MISC ChangeLog 26586 RMD160 1c2fa19aec82218bdb8cb50c7a3bc4a49620b0d5 SHA1 f6fc8619617e54f61ab9a0214a11b79f3be9b17d SHA256 587335c0042bdd5d8f7b06de21b0f06d1df069df2f80a1261d8ad89eb2383f2b
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
