@@ -1,6 +1,11 @@
 # ChangeLog for x11-themes/gnome-themes
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-themes/ChangeLog,v 1.212 2009/07/06 22:06:18 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-themes/ChangeLog,v 1.213 2009/08/08 22:57:31 eva Exp $
+
+  08 Aug 2009; Gilles Dartiguelongue <eva@gentoo.org>
+  -gnome-themes-2.26.2.ebuild, gnome-themes-2.26.3.1.ebuild:
+  Do not install HighContrast* themes if not requested, bug #274515. Clean
+  up old revision.
 
 *gnome-themes-2.26.3.1 (07 Jul 2009)
 
